no rows to show text alignment fixed

--- a/examples/wrapper-components/vue-javascript/src/assets/base.scss
+++ b/examples/wrapper-components/vue-javascript/src/assets/base.scss
@@ -6,9 +6,3 @@ div {
   background-color: tokens.$ifxColorBaseWhite;
   // --ifx-font-family: 'Arial black'; //overwrite default font
 }
-
-
-div {
-  background-color: tokens.$ifxColorBaseWhite;
-  // --ifx-font-family: 'Arial black'; //overwrite default font
-}
